# Younite_internship

./: CMakeCache.txt  CMakeLists.txt  CQD_DB  Makefile  README.md  cmake_install.cmake  main.cpp
cpp-projects-akif/younite_cpp_projects/: CMakeLists.txt  arrays101.cpp  function_pointers.cpp  functions.cpp  pointers.cpp  sizesOfDataTypes.cpp  static_arrays.cpp  strings.cpp  structures.cpp  templets.cpp  threads.cpp  variable_array.cpp
cpp-projects-akif/younite_cpp_projects/inc/: arrays101.h  function_pointers.h  functions.h  sizesOfDataTypes.h  strings.h  structures.h  templets.h  threads.h
cpp-projects-struct-classes/younite_cpp_projects/: CMakeLists.txt  a.out  arrays101.cpp  class.cpp  function_pointers.cpp  functions.cpp  pointers.cpp  sizesOfDataTypes.cpp  static_arrays.cpp  strings.cpp  struct.cpp  struct1.cpp  structures.cpp  templets.cpp  threads.cpp  variable_array.cpp
cpp-projects-struct-classes/younite_cpp_projects/inc/: arrays101.h  class.h  function_pointers.h  functions.h  strings.h  structures.h  templets.h  threads.h
inc/: api.h  database.h  server.h  tcp_local.h
wave-file-read-and-write-akif/: README.md  main.cpp  wave-file-helper.h
